[package]
name = "wolfram_alpha"
version = "0.4.0"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A library providing Rust bindings for the Wolfram|Alpha API"
repository = "https://github.com/indiv0/wolfram-alpha-rs"
documentation = "https://indiv0.github.io/wolfram-alpha-rs/wolfram_alpha/"
readme = "README.md"
keywords = [
    "wolfram",
    "alpha",
    "async",
    "API",
    "library",
]
license = "MIT/Apache-2.0"
include = [
    "build.rs",
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs",
]
build = "build.rs"

[build-dependencies.serde_codegen]
optional = true
version = "0.8.23"

[dependencies]
futures = "0.1.17"
hyper = "0.11.7"
log = "0.3.6"
serde = "0.8.23"
serde_xml = "0.8.1"
tokio-core = "0.1.10"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_derive]
optional = true
version = "0.8.23"

[dependencies.url]
features = ["serde"]
version = "1.6.0"

[dev-dependencies]
hyper-tls = "0.1.2"

[features]
default = ["with-syntex"]
nightly = ["serde_derive"]
nightly-testing = ["clippy", "nightly"]
with-syntex = ["serde_codegen"]
